# zhigalev_delivery_club

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 28caf8fd5639_make_type_id_nullable.py  45157d7dc8ce_update_models.py
src/: main.py  redis_client.py  schemas.py  settings.py
src/api/: handlers.py
src/api/routers/: packages.py
src/data/db/: __init__.py  db.py  session.py
src/data/models/: __init__.py  models.py
src/data/repositories/: db_crud.py
src/dependencies/: dependencies.py
src/middleware/: session_middleware.py
src/schemas/: package_schemas.py  package_type.py  schemas.py
src/services/: package_service.py  package_type_service.py  ping_service.py
src/tasks/: calculating_cost_parcel.py  celery_worker.py  scheduler.py
src/utils/: currency_utils.py  delivery_calculator.py  logger.py
